Change The Help Page.

--- a/public/view/help.html
+++ b/public/view/help.html
@@ -16,30 +16,38 @@
 
         <h4>On Start Page.</h4>
 
+        <p>You will have to do the following to chat to another user.</p>
+        <p>These two first in any order.</p>
+
         <ol>
-            <li>Choose whether you are a Supporter Or want Support</li>
-            <li>Select what you want to talk about.</li>
-            <li>Click (Insert The Same Looking Button) to Find a Match.</li>
+            <li>Choose whether you are a Supporter or you want Support</li>
+            <li>Select what you want to talk about</li>
         </ol>
+        <p>Then click (Insert Button) to Find a Match and Start Chatting.</p>
+
 
         <h4>On Chat Page.</h4>
 
+        <p>When matched with a a user you can do the following in any order.</p>
+
         <ul>
-            <li>You can Type into (Insert Same Input) and Send a text Message by clicking Enter or (Insert Same Button).</li>
-            <li>You can Skip the matched user by clicking on (Insert Same Button).</li>
-            <li>You can Report the matched user by clicking on (Insert Same Button).</li>
-            <li>You can invite the other user to a game, you can choose by clicking on (Insert Same Button) then click on your chosen game.</li>
+            <li>You can Type into (Insert Input) and Send a text Message by pressing Enter or (Insert Button).</li>
+            <li>You can Skip the matched user by clicking on (Insert Button).</li>
+            <li>You can Report the matched user by clicking on (Insert Button).</li>
+            <li>You can invite the other user to a game, to choose a game click on (Insert Button) then click on your chosen game by clicking on choosing game button like (Insert Button).</li>
         </ul>
 
-        <p>If you skip, report, get skipped, reported or blocked you will be redirected to start page where you can can change your options and rematch.</p>
+        <p>If you skip, report, get skipped, reported or blocked you will be redirected to start page where you can can change your preferences and match with another user to start chatting again.</p>
 
         <h4>On Contact Form Page.</h4>
-        <p>You can use the form to send us a enqiry or some feedback.</p>
+
+        <p>You can use the form to send us a enquiry or some feedback fill the inputs in any order.</p>
 
         <ul>
-            <li>You will have to enter your email address.</li>
-            <li>You can enter a subject for the message.</li>
-            <li>You will have to enter your message.</li>
+            <li>You will have to enter your email address into (Insert Input).</li>
+            <li>You can enter a subject for the message into (Insert Input).</li>
+            <li>You will have to enter your message into (Insert Input).</li>
         </ul>
+        <p>Then click (Insert Button) to send us your message.</p>
     </body>
 </html>
