--- a/public/view/help.html
+++ b/public/view/help.html
@@ -2,52 +2,102 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="author" content="Jahidul Pabel Islam">
+        <meta name="description" content="">
+        <meta name="keywords" content="">
+        <!-- Bootstrap stylesheet-->
+        <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+        <link rel="stylesheet" href="lib/main.css"/>
+        <link rel="icon" href="images/logo.png">
         <title>Help - Buddy Support</title>
     </head>
 
     <body>
-        <header>
-            <a href="/">Chat</a>
-            <a href="contact">Contact</a>
-            <a href="help">Help</a>
-        </header>
 
-        <h2>Help</h2>
+        <!-- Fixed navbar -->
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                            aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" id="logoContainer" href="/"><img id="logo" src="images/logo.png" alt="Logo for Buddy Support"> </a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/contact">Contact</a></li>
+                        <li class="active"><a href="/help" >Help</a></li>
+                    </ul>
+                    <form class="navbar-form navbar-right">
+                        <div class="form-group">
+                            <label id="languageLabel" for="language">Your Chosen Language</label>
+                            <select id="language" class="form-control">
+                                <option>ENG</option>
+                                <option>POL</option>
+                                <option>BG</option>
+                                <option>WAL</option>
+                            </select>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </nav>
 
-        <h4>On Start Page.</h4>
+        <div id="help">
 
-        <p>You will have to do the following to chat to another user.</p>
-        <p>These two first in any order.</p>
+            <h2>Help</h2>
 
-        <ol>
-            <li>Choose whether you are a Supporter or you want Support</li>
-            <li>Select what you want to talk about</li>
-        </ol>
-        <p>Then click (Insert Button) to Find a Match and Start Chatting.</p>
+            <h4>On Start Page.</h4>
+
+            <p>You will have to do the following to chat to another user.</p>
+            <p>These two first in any order.</p>
+
+            <ol>
+                <li>Choose whether you are a Supporter or you want Support</li>
+                <li>Select what you want to talk about</li>
+            </ol>
+            <p>Then click <button id="startButton" class="btn btn-default">Start Chatting</button> to Find a Match and Start Chatting.</p>
 
 
-        <h4>On Chat Page.</h4>
+            <h4>On Chat Page.</h4>
 
-        <p>When matched with a a user you can do the following in any order.</p>
+            <p>When matched with a a user you can do the following in any order.</p>
 
-        <ul>
-            <li>You can Type into (Insert Input) and Send a text Message by pressing Enter or (Insert Button).</li>
-            <li>You can Skip the matched user by clicking on (Insert Button).</li>
-            <li>You can Report the matched user by clicking on (Insert Button).</li>
-            <li>You can invite the other user to a game, to choose a game click on (Insert Button) then click on your chosen game by clicking on choosing game button like (Insert Button).</li>
-        </ul>
+            <ul>
+                <li class="form-inline">You can Type into  <input id="message" placeholder="hello :)..." class="form-control"/> and Send a text Message by pressing Enter or <button class="btn btn-default">Send</button>.</li>
+                <li>You can Skip the matched user by clicking on <button class="btn btn-default">Skip User</button>.</li>
+                <li>You can Report the matched user by clicking on <button class="btn btn-default">Report User</button>.</li>
+                <li>You can invite the other user to a game, to choose a game click on <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
+                                                                                               aria-haspopup="true" aria-expanded="false">
+                    🎮
+                </button> then click on your chosen game by clicking on choosing game button like <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
+                                                                                                          aria-haspopup="true" aria-expanded="false">
+                    🎮
+                </button>.</li>
+            </ul>
 
-        <p>If you skip, report, get skipped, reported or blocked you will be redirected to start page where you can can change your preferences and match with another user to start chatting again.</p>
+            <p>If you skip, report, get skipped, reported or blocked you will be redirected to start page where you can can change your preferences and match with another user to start chatting again.</p>
 
-        <h4>On Contact Form Page.</h4>
+            <h4>On Contact Form Page.</h4>
 
-        <p>You can use the form to send us a enquiry or some feedback fill the inputs in any order.</p>
+            <p>You can use the form to send us a enquiry or some feedback fill the inputs in any order.</p>
 
-        <ul>
-            <li>You will have to enter your email address into (Insert Input).</li>
-            <li>You can enter a subject for the message into (Insert Input).</li>
-            <li>You will have to enter your message into (Insert Input).</li>
-        </ul>
-        <p>Then click (Insert Button) to send us your message.</p>
+            <ul>
+                <li class="form-inline">You will have to enter your email address into <input id="email" placeholder="e.g. example@example.com" class="form-control"/>.</li>
+                <li class="form-inline">You can enter a subject for the message into <input id="subject" placeholder="e.g. How do i play a game?" class="form-control"/>.</li>
+                <li class="form-inline">You will have to enter your message into <input id="message2" placeholder="e.g. hello, i wanted  ..." class="form-control"/>.</li>
+            </ul>
+            <p>Then click <button class="btn btn-default" type="submit">Send</button> to send us your message.</p>
+        </div>
+        <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="lib/fixedFooterHeader.js"></script>
     </body>
 </html>
