--- a/public/view/help.html
+++ b/public/view/help.html
@@ -56,28 +56,27 @@
             <h4>On Start Page.</h4>
 
             <p>You will have to do the following to chat to another user.</p>
+
             <p>These two first in any order.</p>
 
             <ol>
                 <li>Choose whether you are a Supporter or you want Support</li>
                 <li>Select what you want to talk about</li>
             </ol>
-            <p>Then click <button id="startButton" class="btn btn-default">Start Chatting</button> to Find a Match and Start Chatting.</p>
 
+            <p>Then click <button class="btn btn-primary">Start Chatting</button> to Find a Match and Start Chatting.</p>
 
             <h4>On Chat Page.</h4>
 
             <p>When matched with a a user you can do the following in any order.</p>
 
             <ul>
-                <li class="form-inline">You can Type into  <input id="message" placeholder="hello :)..." class="form-control"/> and Send a text Message by pressing Enter or <button class="btn btn-default">Send</button>.</li>
-                <li>You can Skip the matched user by clicking on <button class="btn btn-default">Skip User</button>.</li>
-                <li>You can Report the matched user by clicking on <button class="btn btn-default">Report User</button>.</li>
-                <li>You can invite the other user to a game, to choose a game click on <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-                                                                                               aria-haspopup="true" aria-expanded="false">
+                <li class="form-inline">You can Type into  <input placeholder="hello :)..." class="form-control"/> and Send a text Message by pressing Enter or <button class="btn btn-default">Send</button>.</li>
+                <li>You can Skip the matched user by clicking on <button class="btn btn-danger">Skip User</button>.</li>
+                <li>You can Report the matched user by clicking on <button class="btn btn-warning">Report User</button>.</li>
+                <li>You can invite the other user to a game, to choose a game click on <button type="button" class="btn btn-default">
                     🎮
-                </button> then click on your chosen game by clicking on choosing game button like <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-                                                                                                          aria-haspopup="true" aria-expanded="false">
+                </button> then click on your chosen game by clicking on choosing game button like <button type="button" class="btn btn-default">
                     🎮
                 </button>.</li>
             </ul>
@@ -89,11 +88,11 @@
             <p>You can use the form to send us a enquiry or some feedback fill the inputs in any order.</p>
 
             <ul>
-                <li class="form-inline">You will have to enter your email address into <input id="email" placeholder="e.g. example@example.com" class="form-control"/>.</li>
-                <li class="form-inline">You can enter a subject for the message into <input id="subject" placeholder="e.g. How do i play a game?" class="form-control"/>.</li>
-                <li class="form-inline">You will have to enter your message into <input id="message2" placeholder="e.g. hello, i wanted  ..." class="form-control"/>.</li>
+                <li class="form-inline">You will have to enter your email address into <input placeholder="e.g. example@example.com" class="form-control"/>.</li>
+                <li class="form-inline">You can enter a subject for the message into <input placeholder="e.g. How do i play a game?" class="form-control"/>.</li>
+                <li class="form-inline">You will have to enter your message into <input placeholder="e.g. hello, i wanted  ..." class="form-control"/>.</li>
             </ul>
-            <p>Then click <button class="btn btn-default" type="submit">Send</button> to send us your message.</p>
+            <p>Then click <button class="btn btn-default">Send</button> to send us your message.</p>
         </div>
         <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
