--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -126,10 +126,10 @@
             </div>
         </div>
 
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+        <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+        <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="lib/chat.js"></script>
         <script type="text/javascript" src="lib/fixedFooterHeader.js"></script>
     </body>
