--- a/public/view/help.html
+++ b/public/view/help.html
@@ -94,9 +94,9 @@
             </ul>
             <p>Then click <button class="btn btn-default">Send</button> to send us your message.</p>
         </div>
-        <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+        <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="lib/fixedFooterHeader.js"></script>
     </body>
 </html>
