--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -125,8 +125,8 @@
 
                 <div id="messagesContainer">
 
-                    <div id="feedbackContainer" class="panel panel-default">
-                        <div class="panel-body" id="feedback"></div>
+                    <div id="feedbackContainer" class="panel panel-success">
+                        <div class="panel-heading" id="feedback"></div>
                     </div>
 
                     <p id="motivationalMessage"></p>
