--- a/public/view/help.html
+++ b/public/view/help.html
@@ -51,11 +51,13 @@
 
         <div id="help">
 
-            <h2>Help</h2>
+            <h1>Help</h1>
 
-            <h4>On Start Page.</h4>
+            <div class="page-header">
+                <h3>On Start Page.</h3>
+            </div>
 
-            <p>You will have to do the following to chat to another user.</p>
+            <p>You must do the following to chat to another user. </p>
 
             <p>These two first in any order.</p>
 
@@ -66,31 +68,35 @@
 
             <p>Then click <button class="btn btn-primary">Start Chatting</button> to Find a Match and Start Chatting.</p>
 
-            <h4>On Chat Page.</h4>
+            <div class="page-header">
+                <h3>On Chat Page.</h3>
+            </div>
 
-            <p>When matched with a a user you can do the following in any order.</p>
+            <p>When matched with a user you can do the following in any order.</p>
 
             <ul>
-                <li class="form-inline">You can Type into  <input placeholder="hello :)..." class="form-control"/> and Send a text Message by pressing Enter or <button class="btn btn-default">Send</button>.</li>
+                <li class="form-inline">You can Type into <input placeholder="e.g. hello :)..." class="form-control"/> and Send a text Message by pressing Enter or <button class="btn btn-default">Send</button>.</li>
                 <li>You can Skip the matched user by clicking on <button class="btn btn-danger">Skip User</button>.</li>
                 <li>You can Report the matched user by clicking on <button class="btn btn-warning">Report User</button>.</li>
-                <li>You can invite the other user to a game, to choose a game click on <button type="button" class="btn btn-default">
+                <li>You can invite the other user to a game, to choose a game click <button type="button" class="btn btn-default">
                     🎮
                 </button> then click on your chosen game by clicking on choosing game button like <button type="button" class="btn btn-default">
                     🎮
                 </button>.</li>
             </ul>
 
-            <p>If you skip, report, get skipped, reported or blocked you will be redirected to start page where you can can change your preferences and match with another user to start chatting again.</p>
+            <p>If you skip, report, get skipped, reported or blocked you will be redirected to start page where you can change your preferences and match with another user to start chatting again.</p>
 
-            <h4>On Contact Form Page.</h4>
+            <div class="page-header">
+                <h3>On Contact Form Page.</h3>
+            </div>
 
-            <p>You can use the form to send us a enquiry or some feedback fill the inputs in any order.</p>
+            <p>You can use the form to send us an enquiry or some feedback fill the inputs in any order.</p>
 
             <ul>
-                <li class="form-inline">You will have to enter your email address into <input placeholder="e.g. example@example.com" class="form-control"/>.</li>
+                <li class="form-inline">You must enter your email address into <input placeholder="e.g. example@example.com" class="form-control"/>.</li>
                 <li class="form-inline">You can enter a subject for the message into <input placeholder="e.g. How do i play a game?" class="form-control"/>.</li>
-                <li class="form-inline">You will have to enter your message into <input placeholder="e.g. hello, i wanted  ..." class="form-control"/>.</li>
+                <li class="form-inline">You must enter your message into <input placeholder="e.g. hello, i wanted  ..." class="form-control"/>.</li>
             </ul>
             <p>Then click <button class="btn btn-default">Send</button> to send us your message.</p>
         </div>
