--- a/public/lib/main.css
+++ b/public/lib/main.css
@@ -31,25 +31,35 @@
 }
 
 #messages > p {
+    max-width: 75%;
+    padding: 0;
+    margin: 0;
+    color: white;
+    word-break: break-all;
+}
+
+#messages > p >  p {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
     max-width: 75%;
     padding: 5px;
     margin: 5px 0;
-    color: white;
-    word-break: break-all;
+    display: inline-block;
+    clear: right;
 }
 
-#messages > p.received {
-    text-align: left;
+#messages > p.received > p {
     background: dodgerblue;
 }
 
 #messages > p.sent {
     text-align: right;
-    background: green;
     margin-left: auto;
+}
+
+#messages > p.sent > p {
+    background: green;
 }
 
 button {
