--- a/public/lib/main.css
+++ b/public/lib/main.css
@@ -35,7 +35,7 @@
     padding: 0;
     margin: 0;
     color: white;
-    word-break: break-all;
+    word-wrap: break-word;
 }
 
 #messages > p >  p {
