--- a/public/view/contact.html
+++ b/public/view/contact.html
@@ -7,6 +7,9 @@
         <meta name="author" content="Jahidul Pabel Islam">
         <meta name="description" content="">
         <meta name="keywords" content="">
+        <!-- Bootstrap stylesheet-->
+        <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
         <link rel="stylesheet" href="lib/main.css"/>
         <link rel="icon" href="images/logo.png">
         <title>Contact Buddy Support</title>
@@ -14,46 +17,85 @@
 
     <body>
 
-        <header>
-            <a href="/">Chat</a>
-            <a href="contact">Contact</a>
-            <a href="help">Help</a>
-        </header>
+        <!-- Fixed navbar -->
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                            aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand active" id="logoContainer" href="/"><img id="logo" src="images/logo.png" alt="Logo for Buddy Support" style="opacity:1;"> </a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/contact">Contact</a></li>
+                        <li><a href="/help">Help</a></li>
+                    </ul>
+                    <form class="navbar-form navbar-right">
+                        <div class="form-group">
+                            <label id="languageLabel" for="language">Your Chosen Language</label>
+                            <select id="language" class="form-control">
+                                <option>ENG</option>
+                                <option>POL</option>
+                                <option>BG</option>
+                                <option>WAL</option>
+                            </select>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </nav>
 
-        <h3>Form</h3>
-        <p>Use this contact form for any enquires or to give us any feedback quickly.</p>
-        <p>* indicates a required field</p>
+        <div id="contact">
+            <div class="container">
+                <h3>Form</h3>
+                <p>Use this contact form for any enquires or to give us any feedback quickly.</p>
+                <p>* indicates a required field</p>
 
-        <form id="contactForm" method="post">
+                <form id="contactForm" method="post">
 
-            <label for="emailInput">Your Email Address *</label>
-            <input type="email" name="emailInput" placeholder="e.g. joe@example.com" required tabindex="1" id="emailInput"
-                   title="Email Address" oninput="validateEmail(this.value)">
-            <p id="emailFeedback"></p>
+                    <div class="form-group">
+                        <label for="emailInput">Your Email Address *</label>
+                        <input type="email" name="emailInput" placeholder="e.g. joe@example.com" required tabindex="1" id="emailInput"
+                               title="Email Address" oninput="validateEmail(this.value)" class="form-control">
+                        <p id="emailFeedback"></p>
+                    </div>
 
-            <label for="subjectInput">The Message Subject</label>
-            <input type="text" name="subjectInput" placeholder="e.g. App Feedback" tabindex="2" id="subjectInput"
-                   title="Subject of Message">
+                    <div class="form-group">
+                        <label for="subjectInput">The Message Subject</label>
+                        <input type="text" name="subjectInput" placeholder="e.g. App Feedback" tabindex="2" id="subjectInput"
+                               title="Subject of Message" class="form-control">
+                    </div>
 
-            <label for="messageInput">Your Message *</label>
+                    <div class="form-group">
+                        <label for="messageInput">Your Message *</label>
+                        <textarea name="messageInput" placeholder="e.g. Your app could do with more colour." required tabindex="3" id="messageInput"
+                                  title="The Message" oninput="validateMessage(this.value)" class="form-control"></textarea>
+                        <p id="messageFeedback"></p>
+                    </div>
 
-            <textarea name="messageInput" placeholder="e.g. Your app could do with more colour." required tabindex="3" id="messageInput"
-                      title="The Message" oninput="validateMessage(this.value)"></textarea>
-            <p id="messageFeedback"></p>
+                    <img src="images/loading.gif" id="loading">
 
-            <img src="images/loading.gif" id="loading">
+                    <button type="submit" class="btn btn-default">Submit</button>
 
-            <button type="submit">Submit</button>
+                    <p id="feedback"></p>
 
-            <p id="feedback"></p>
+                </form>
 
-        </form>
+                <p>Or you can send your enquires or messages to <a href="mailto:jahidul.pabel.islam@hotmail.com" target="_blank">
+                    jahidul.pabel.islam@hotmail.com
+                </a>.</p>
+            </div>
+        </div>
 
-        <p>Or you can send your enquires or messages to <a href="mailto:jahidul.pabel.islam@hotmail.com" target="_blank">
-            jahidul.pabel.islam@hotmail.com
-        </a>.</p>
-
-        <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+        <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="lib/bootstrap/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="lib/contactForm.js"></script>
+        <script type="text/javascript" src="lib/fixedFooterHeader.js"></script>
     </body>
 </html>
