--- a/public/view/contact.html
+++ b/public/view/contact.html
@@ -28,11 +28,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand active" id="logoContainer" href="/"><img id="logo" src="images/logo.png" alt="Logo for Buddy Support" style="opacity:1;"> </a>
+                    <a class="navbar-brand active" id="logoContainer" href="/"><img id="logo" src="images/logo.png" alt="Logo for Buddy Support"> </a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/contact">Contact</a></li>
+                        <li class="active"><a  href="/contact">Contact</a></li>
                         <li><a href="/help">Help</a></li>
                     </ul>
                     <form class="navbar-form navbar-right">
@@ -52,14 +52,19 @@
 
         <div id="contact">
             <div class="container">
-                <h3>Form</h3>
-                <p>Use this contact form for any enquires or to give us any feedback quickly.</p>
-                <p>* indicates a required field</p>
 
                 <form id="contactForm" method="post">
 
+                    <h2>Form</h2>
+
+                    <p>Use this contact form for any enquires or to give us any feedback quickly.</p>
+                    <p>Or you can send your enquires or messages to <a href="mailto:jahidul.pabel.islam@hotmail.com" target="_blank">
+                        jahidul.pabel.islam@hotmail.com
+                    </a>.</p>
+                    <p><span class="required">*</span> indicates a required field</p>
+
                     <div class="form-group">
-                        <label for="emailInput">Your Email Address *</label>
+                        <label for="emailInput">Your Email Address <span class="required">*</span></label>
                         <input type="email" name="emailInput" placeholder="e.g. joe@example.com" required tabindex="1" id="emailInput"
                                title="Email Address" oninput="validateEmail(this.value)" class="form-control">
                         <p id="emailFeedback"></p>
@@ -72,7 +77,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="messageInput">Your Message *</label>
+                        <label for="messageInput">Your Message <span class="required">*</span></label>
                         <textarea name="messageInput" placeholder="e.g. Your app could do with more colour." required tabindex="3" id="messageInput"
                                   title="The Message" oninput="validateMessage(this.value)" class="form-control"></textarea>
                         <p id="messageFeedback"></p>
@@ -80,15 +85,11 @@
 
                     <img src="images/loading.gif" id="loading">
 
-                    <button type="submit" class="btn btn-default">Submit</button>
+                    <button type="submit" class="btn btn-success">Submit</button>
 
                     <p id="feedback"></p>
 
                 </form>
-
-                <p>Or you can send your enquires or messages to <a href="mailto:jahidul.pabel.islam@hotmail.com" target="_blank">
-                    jahidul.pabel.islam@hotmail.com
-                </a>.</p>
             </div>
         </div>
 
