--- a/public/view/contact.html
+++ b/public/view/contact.html
@@ -55,13 +55,12 @@
 
                 <form id="contactForm" method="post">
 
-                    <h2>Form</h2>
+                    <h2>Contact Us - Form</h2>
 
-                    <p>Use this contact form for any enquires or to give us any feedback quickly.</p>
-                    <p>Or you can send your enquires or messages to <a href="mailto:jahidul.pabel.islam@hotmail.com" target="_blank">
+                    <p>Use this contact form for any enquiries or to give us any feedback quickly, or you can send your enquiries or messages to <a href="mailto:jahidul.pabel.islam@hotmail.com" target="_blank">
                         jahidul.pabel.islam@hotmail.com
                     </a>.</p>
-                    <p><span class="required">*</span> indicates a required field</p>
+                    <p><span class="required">*</span> indicates a required field.</p>
 
                     <div class="form-group">
                         <label for="emailInput">Your Email Address <span class="required">*</span></label>
