--- a/public/view/contact.html
+++ b/public/view/contact.html
@@ -57,12 +57,17 @@
 
                     <h2>Contact Us - Form</h2>
 
-                    <p>Use this contact form for any enquiries or to give us any feedback quickly, or you can send your enquiries or messages to <a href="mailto:jahidul.pabel.islam@hotmail.com" target="_blank">
-                        jahidul.pabel.islam@hotmail.com
-                    </a>.</p>
+                    <p>Use this contact form for any enquiries or to give us any feedback quickly, or you can send your enquiries or messages to <a href="mailto:jahidul.pabel.islam@hotmail.com" target="_blank">jahidul.pabel.islam@hotmail.com</a>.</p>
                     <p><span class="required">*</span> indicates a required field.</p>
 
                     <div class="form-group">
+                        <select name="contactType" id="contactType" class="form-control">
+                            <option value="Enquiry" selected>Enquiry</option>
+                            <option value="Message">Message</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group" id="emailGroup">
                         <label for="emailInput">Your Email Address <span class="required">*</span></label>
                         <input type="email" name="emailInput" placeholder="e.g. joe@example.com" required tabindex="1" id="emailInput"
                                title="Email Address" oninput="validateEmail(this.value)" class="form-control">
@@ -89,6 +94,7 @@
                     <p id="feedback"></p>
 
                 </form>
+                
             </div>
         </div>
 
