--- a/public/lib/main.css
+++ b/public/lib/main.css
@@ -42,11 +42,9 @@
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    max-width: 75%;
     padding: 5px;
     margin: 5px 0;
     display: inline-block;
-    clear: right;
 }
 
 #messages > p.received > p {
@@ -230,6 +228,17 @@ p#userDisplay > p.matched {
 p#userDisplay > p.user {
     float: right;
     background: green;
+}
+
+#messages > p.date {
+    max-width: 100%;
+    width: 100%;
+    text-align: center;
+}
+
+#messages > p.date > p {
+    margin: 0;
+    background: #d6d5d5;
 }
 
 @media only screen and (min-width: 481px) {
