Add time to messages.

--- a/public/lib/main.css
+++ b/public/lib/main.css
@@ -45,6 +45,7 @@
     padding: 5px;
     margin: 5px 0;
     display: inline-block;
+    font-weight: bold;
 }
 
 #messages > p.received > p {
@@ -239,6 +240,10 @@ p#userDisplay > p.user {
 #messages > p.date > p {
     margin: 0;
     background: #d6d5d5;
+}
+
+#messages > p > p >p.time {
+    font-weight: initial;
 }
 
 @media only screen and (min-width: 481px) {
