--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -136,6 +136,8 @@
             </div>
         </div>
 
+        <audio id="notification" src="sound/notification.wav" style="display: none">
+
         <script type="text/javascript" src="/socket.io/socket.io.js"></script>
         <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
