--- a/public/lib/main.css
+++ b/public/lib/main.css
@@ -246,6 +246,17 @@ p#userDisplay > p.user {
     font-weight: initial;
 }
 
+#notificationContainer {
+    position: fixed;
+    bottom: 0;
+    padding: 5px;
+    display: none;
+}
+
+#notification {
+    margin: 0;
+}
+
 @media only screen and (min-width: 481px) {
 
     #contactForm {
