--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -52,8 +52,12 @@
             </div>
         </nav>
 
-        <div id="notificationContainer" class="alert alert-info" role="alert">
-            <p id="notification"></p>
+        <div id="notificationContainerContainer">
+            <div class="container">
+                <div id="notificationContainer" class="alert alert-info" role="alert">
+                <p id="notification"></p>
+                </div>
+            </div>
         </div>
 
         <div id="messageForm">
