--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -52,10 +52,11 @@
             </div>
         </nav>
 
-        <div id="notificationContainerContainer">
+        <div id="notificationsContainer">
             <div class="container">
-                <div id="notificationContainer" class="alert alert-info" role="alert">
-                <p id="notification"></p>
+                <div id="notifications">
+                    <p id="newMessage" class="notification alert alert-info" role="alert">New Message ↓</p>
+                    <p id="userTyping" class="notification alert alert-info" role="alert">User is typing...</p>
                 </div>
             </div>
         </div>
