Notifications via Notifications API for messages.

--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -146,7 +146,7 @@
         </div>
 
 
-        <audio autoplay id="notificationSound" autoplay>
+        <audio autoplay id="notificationSound">
             <source src="sound/notification.wav" type="audio/wav">
             <source src="sound/notification.mp3" type="audio/mp3">
             <source src="sound/notification.ogg" type="audio/ogg">
