--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -55,6 +55,7 @@
         <div id="notificationsContainer">
             <div class="container">
                 <div id="notifications">
+                    <p id="error" class="notification alert alert-danger" role="alert"></p>
                     <p id="newMessage" class="notification alert alert-info" role="alert">New Message ↓</p>
                     <p id="userTyping" class="notification alert alert-info" role="alert">User is typing...</p>
                 </div>
