Only Send Notification when user isn't on page/tab

--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -154,7 +154,8 @@
         <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="lib/chat.js"></script>
+        <script type="text/javascript" src="lib/helperFunctions.js"></script>
         <script type="text/javascript" src="lib/fixedFooterHeader.js"></script>
+        <script type="text/javascript" src="lib/chat.js"></script>
     </body>
 </html>
