Code Cleanp up.

--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -11,6 +11,7 @@
         <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
         <link rel="stylesheet" href="lib/main.css" />
+        <link rel="stylesheet" href="lib/chat.css" />
         <link rel="icon" href="images/logo.png">
         <title>Chat | Buddy Support</title>
     </head>
@@ -155,6 +156,7 @@
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="lib/helperFunctions.js"></script>
+
         <script type="text/javascript" src="lib/fixedFooterHeader.js"></script>
         <script type="text/javascript" src="lib/chat.js"></script>
     </body>
