--- a/public/view/help.html
+++ b/public/view/help.html
@@ -10,6 +10,7 @@
         <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
         <link rel="stylesheet" href="lib/main.css"/>
+        <link rel="stylesheet" href="lib/help.css" />
         <link rel="icon" href="images/logo.png">
         <title>Help - Buddy Support</title>
     </head>
