--- a/public/view/contact.html
+++ b/public/view/contact.html
@@ -11,6 +11,7 @@
         <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
         <link rel="stylesheet" href="lib/main.css"/>
+        <link rel="stylesheet" href="lib/contact.css" />
         <link rel="icon" href="images/logo.png">
         <title>Contact Buddy Support</title>
     </head>
