Add sending feedback for contact form.

--- a/public/view/contact.html
+++ b/public/view/contact.html
@@ -9,6 +9,7 @@
         <meta name="keywords" content="">
         <!-- Bootstrap stylesheet-->
         <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
         <link rel="stylesheet" href="lib/main.css"/>
         <link rel="stylesheet" href="lib/contact.css" />
@@ -88,9 +89,7 @@
                         <p id="messageFeedback"></p>
                     </div>
 
-                    <img src="images/loading.gif" id="loading">
-
-                    <button type="submit" class="btn btn-success">Submit</button>
+                    <button id="submit" type="submit" class="btn btn-success" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Sending">Send</button>
 
                     <p id="feedback"></p>
 
