--- a/public/view/contact.html
+++ b/public/view/contact.html
@@ -72,20 +72,20 @@
                     <div class="form-group" id="emailGroup">
                         <label for="emailInput">Your Email Address <span class="required">*</span></label>
                         <input type="email" name="emailInput" placeholder="e.g. joe@example.com" required tabindex="1" id="emailInput"
-                               title="Email Address" oninput="validateEmail(this.value)" class="form-control">
+                               title="Email Address" oninput="validateEmail(this.value)" class="form-control input">
                         <p id="emailFeedback"></p>
                     </div>
 
                     <div class="form-group">
                         <label for="subjectInput">The Message Subject</label>
                         <input type="text" name="subjectInput" placeholder="e.g. App Feedback" tabindex="2" id="subjectInput"
-                               title="Subject of Message" class="form-control">
+                               title="Subject of Message" class="form-control input">
                     </div>
 
                     <div class="form-group">
                         <label for="messageInput">Your Message <span class="required">*</span></label>
                         <textarea name="messageInput" placeholder="e.g. Your app could do with more colour." required tabindex="3" id="messageInput"
-                                  title="The Message" oninput="validateMessage(this.value)" class="form-control"></textarea>
+                                  title="The Message" oninput="validateMessage(this.value)" class="form-control input"></textarea>
                         <p id="messageFeedback"></p>
                     </div>
 
