--- a/public/lib/chat.css
+++ b/public/lib/chat.css
@@ -1,43 +1,70 @@
-
 #messageForm {
     background: #000;
+    bottom: 0;
+    color: #FFF;
+    display: none;
     padding: 3px;
     position: fixed;
-    bottom: 0;
     width: 100%;
-    color: white;
-    display: none;
 }
 
 #messages > p {
-    max-width: 75%;
-    padding: 0;
+    color: #FFF;
     margin: 0;
-    color: white;
-    word-wrap: break-word;
+    max-width: 75%;
+    word-break: break-all;
+}
+
+#messages > p#userDisplay {
+    max-width: 100%;
 }
 
 #messages > p > p {
-    -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
     border-radius: 4px;
-    padding: 5px;
-    margin: 5px 0;
     display: inline-block;
-    font-weight: bold;
+    font-weight: 700;
+    margin: 5px 0;
+    padding: 5px;
+}
+
+#messages > p#userDisplay > p.matched {
+    background: #1E90FF;
+}
+
+#messages > p#userDisplay > p.user {
+    background: green;
+    float: right;
 }
 
 #messages > p.received > p {
-    background: dodgerblue;
+    background: #1E90FF;
 }
 
 #messages > p.sent {
-    text-align: right;
     margin-left: auto;
+    text-align: right;
 }
 
 #messages > p.sent > p {
     background: green;
+}
+
+#messages > p.date {
+    max-width: 100%;
+    text-align: center;
+}
+
+#messages > p.date > p {
+    background: #d6d5d5;
+    margin: 0;
+}
+
+#messages > p > p > p.time {
+    font-size: smaller;
+    font-weight: initial;
+    margin: 0;
 }
 
 #chat {
@@ -101,50 +128,9 @@ legend {
     margin-left: 5px;
 }
 
-p#userDisplay {
-    max-width: 100%;
-    padding: 0;
-}
-
-p#userDisplay > p {
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    max-width: 75%;
-    padding: 5px;
-    margin: 5px 0;
-    display: inline-block;
-}
-
-p#userDisplay > p.matched {
-    background: dodgerblue;
-}
-
-p#userDisplay > p.user {
-    float: right;
-    background: green;
-}
-
-#messages > p.date {
-    max-width: 100%;
-    width: 100%;
-    text-align: center;
-}
-
-#messages > p.date > p {
-    margin: 0;
-    background: #d6d5d5;
-}
-
-#messages > p > p > p.time {
-    font-weight: initial;
-    margin: 0;
-    font-size: smaller;
-}
-
 #notificationsContainer {
-    position: fixed;
     bottom: 0;
+    position: fixed;
     width: 100%;
 }
 
@@ -153,7 +139,7 @@ p#userDisplay > p.user {
 }
 
 .notification {
-    padding: 5px;
-    margin: 5px 0;
     display: none;
+    margin: 5px 0;
+    padding: 5px;
 }
