Change the email address shown. Personal > Uni.

--- a/public/view/contact.html
+++ b/public/view/contact.html
@@ -59,7 +59,7 @@
 
                     <h2>Contact Us - Form</h2>
 
-                    <p>Use this contact form for any enquiries or to give us any feedback quickly, or you can send your enquiries or messages to <a href="mailto:jahidul.pabel.islam@hotmail.com" target="_blank">jahidul.pabel.islam@hotmail.com</a>.</p>
+                    <p>Use this contact form for any enquiries or to give us any feedback quickly, or you can send your enquiries or messages to <a href="mailto:up733474@myport.ac.uk" target="_blank">up733474@myport.ac.uk</a>.</p>
                     <p><span class="required">*</span> indicates a required field.</p>
 
                     <div class="form-group">
