--- a/public/view/help.html
+++ b/public/view/help.html
@@ -52,6 +52,8 @@
 
         <div id="help">
 
+            <div class="container">
+
             <h1>Help</h1>
 
             <div class="page-header">
@@ -100,6 +102,7 @@
                 <li class="form-inline">You must enter your message into <input placeholder="e.g. hello, i wanted  ..." class="form-control"/>.</li>
             </ul>
             <p>Then click <button class="btn btn-default">Send</button> to send us your message.</p>
+            </div>
         </div>
         <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
