--- a/public/view/help.html
+++ b/public/view/help.html
@@ -101,7 +101,7 @@
                 <li class="form-inline">You can enter a subject for the message into <input placeholder="e.g. How do i play a game?" class="form-control"/>.</li>
                 <li class="form-inline">You must enter your message into <input placeholder="e.g. hello, i wanted  ..." class="form-control"/>.</li>
             </ul>
-            <p>Then click <button class="btn btn-default">Send</button> to send us your message.</p>
+            <p>Then click <button class="btn btn-success">Send</button> to send us your message.</p>
             </div>
         </div>
         <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
