New message notification take user to new message

--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -9,6 +9,7 @@
         <meta name="keywords" content="">
         <!-- Bootstrap stylesheet-->
         <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
         <link rel="stylesheet" href="lib/main.css" />
         <link rel="stylesheet" href="lib/chat.css" />
@@ -52,7 +53,7 @@
         <div id="notificationsContainer">
             <div class="container">
                 <div id="notifications">
-                    <p id="newMessage" class="notification alert alert-info" role="alert">New Message ↓</p>
+                    <p id="newMessage" class="notification alert alert-info" role="alert">New Message <i id="viewNewMessage" class="fa fa-arrow-down" aria-hidden="true"></i></p>
                     <p id="userTyping" class="notification alert alert-info" role="alert">User is typing...</p>
                     <p id="error" class="notification alert alert-danger" role="alert"></p>
                 </div>
